Put flag full
